# Seaphire

./: LICENSE  README.md
MainStuff/: Cargo.toml
MainStuff/src/: calc1.inu  calc2.inu  calculator.inu  f1.caxy  f1.inu  f2.caxy  f2.inu  f3.caxy  f3.inu  f4.caxy  f4.inu  f5scopes.inu  main.rs
builtin_fns/: Cargo.toml
builtin_fns/src/: ARITHMETIC.rs  COMPILE.rs  Compare.rs  EXECUTE.rs  Input.rs  PRNT.rs  compile_ass.rs  exeold.rs  fetch_data.rs  lib.rs  old_exec.rs
my_modules/: Cargo.toml
my_modules/src/: PARSER.rs  defkeys.rs  fetch_data.rs  get_type.rs  gram_og.pest  grammar.pest  lib.rs  mem_alloc.rs  read_file.rs  reg_alloc.rs  split_sec.rs
