[package]
name = "main_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my_modules =  {path = "/home/kali/Desktop/Programming/ProLang_rusty/my_modules"}
builtin_fns =  {path = "/home/kali/Desktop/Programming/ProLang_rusty/builtin_fns"}
colored = "2.1.0"
